istio-destination/istio-destination.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: simone
  labels:
    istio-injection: enabled
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: srodi-deployment-v1
  namespace: simone
spec:
  selector:
    matchLabels:
      app: srodi
  template:
    metadata:
      labels:
        app: srodi
        version: v1
    spec:
      containers:
      - name: srodi
        image: luksa/kubia:v1
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: srodi-deployment-v2
  namespace: simone
spec:
  selector:
    matchLabels:
      app: srodi
  template:
    metadata:
      labels:
        app: srodi
        version: v2
    spec:
      containers:
      - name: srodi
        image: luksa/kubia:v2
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: srodi-service
  namespace: simone
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  selector:
      app: srodi
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: srodi-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 8080
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: srodi
spec:
  hosts:
  - "*"
  gateways:
  - srodi-gateway
  http:
  - match:
    - uri:
        exact: /test1
    route:
    - destination:
        host: srodi-service.simone.svc.cluster.local
        subset: v1
        port:
          number: 80
      weight: 90 # weighted destination rules
    - destination:
        host: srodi-service.simone.svc.cluster.local
        subset: v2
        port:
          number: 80
      weight: 10
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: srodi-destination-rule
spec:
  host: srodi-service.simone.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
